[gd_scene load_steps=4 format=2]

[ext_resource path="res://sprites/ui/glassPanel_corners.png" type="Texture" id=2]
[ext_resource path="res://gui.gd" type="Script" id=3]
[ext_resource path="res://sprites/ui/glassPanel_corners_hover.png" type="Texture" id=4]

[node name="GUI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -261.0
margin_top = -115.0
margin_right = 271.0
margin_bottom = -6.0
color = Color( 0.00784314, 0.27451, 0.345098, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer2" type="HBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -264.0
margin_top = -120.0
margin_right = 264.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Texture" type="TextureRect" parent="HBoxContainer2"]
margin_right = 120.0
margin_bottom = 120.0
rect_min_size = Vector2( 120, 120 )
size_flags_vertical = 3
expand = true
stretch_mode = 4

[node name="Texture2" type="TextureRect" parent="HBoxContainer2"]
margin_left = 124.0
margin_right = 124.0
margin_bottom = 120.0

[node name="Texture3" type="TextureRect" parent="HBoxContainer2"]
margin_left = 128.0
margin_right = 128.0
margin_bottom = 120.0

[node name="Texture4" type="TextureRect" parent="HBoxContainer2"]
margin_left = 132.0
margin_right = 132.0
margin_bottom = 120.0

[node name="Texture5" type="TextureRect" parent="HBoxContainer2"]
margin_left = 136.0
margin_right = 136.0
margin_bottom = 120.0

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -254.0
margin_top = -110.0
margin_right = 262.0
margin_bottom = -10.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureButton" type="TextureButton" parent="HBoxContainer"]
margin_right = 100.0
margin_bottom = 100.0
texture_normal = ExtResource( 2 )
texture_hover = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureButton2" type="TextureButton" parent="HBoxContainer"]
margin_left = 104.0
margin_right = 204.0
margin_bottom = 100.0
texture_normal = ExtResource( 2 )
texture_hover = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureButton3" type="TextureButton" parent="HBoxContainer"]
margin_left = 208.0
margin_right = 308.0
margin_bottom = 100.0
texture_normal = ExtResource( 2 )
texture_hover = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureButton4" type="TextureButton" parent="HBoxContainer"]
margin_left = 312.0
margin_right = 412.0
margin_bottom = 100.0
texture_normal = ExtResource( 2 )
texture_hover = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureButton5" type="TextureButton" parent="HBoxContainer"]
margin_left = 416.0
margin_right = 516.0
margin_bottom = 100.0
texture_normal = ExtResource( 2 )
texture_hover = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="mouse_entered" from="HBoxContainer/TextureButton" to="." method="_on_TextureButton_mouse_entered"]
[connection signal="mouse_exited" from="HBoxContainer/TextureButton" to="." method="_on_TextureButton_mouse_exited"]
[connection signal="pressed" from="HBoxContainer/TextureButton" to="." method="_on_TextureButton_pressed"]
[connection signal="mouse_entered" from="HBoxContainer/TextureButton2" to="." method="_on_TextureButton_mouse_entered"]
[connection signal="mouse_exited" from="HBoxContainer/TextureButton2" to="." method="_on_TextureButton_mouse_exited"]
[connection signal="pressed" from="HBoxContainer/TextureButton2" to="." method="_on_TextureButton2_pressed"]
[connection signal="mouse_entered" from="HBoxContainer/TextureButton3" to="." method="_on_TextureButton_mouse_entered"]
[connection signal="mouse_exited" from="HBoxContainer/TextureButton3" to="." method="_on_TextureButton_mouse_exited"]
[connection signal="pressed" from="HBoxContainer/TextureButton3" to="." method="_on_TextureButton3_pressed"]
[connection signal="mouse_entered" from="HBoxContainer/TextureButton4" to="." method="_on_TextureButton_mouse_entered"]
[connection signal="mouse_exited" from="HBoxContainer/TextureButton4" to="." method="_on_TextureButton_mouse_exited"]
[connection signal="pressed" from="HBoxContainer/TextureButton4" to="." method="_on_TextureButton4_pressed"]
[connection signal="mouse_entered" from="HBoxContainer/TextureButton5" to="." method="_on_TextureButton_mouse_entered"]
[connection signal="mouse_exited" from="HBoxContainer/TextureButton5" to="." method="_on_TextureButton_mouse_exited"]
[connection signal="pressed" from="HBoxContainer/TextureButton5" to="." method="_on_TextureButton5_pressed"]
